--- a/public/css/index.css
+++ b/public/css/index.css
@@ -224,3 +224,6 @@ tr {
   margin-left: 56px;
   margin-top: -37px;
 }
+.main-sidebar.sidebar-dark-primary.elevation-4{
+  background-color: #3570aa;
+}
