--- a/public/css/index.css
+++ b/public/css/index.css
@@ -252,3 +252,342 @@ label:not(.form-check-label):not(.custom-file-label) {
   margin-left: 65px;
   margin-top: -38px;
 }
+/* Customer part start*/
+#customer{
+  padding-top: 100px;
+}
+#customer .btn.btn-success {
+  float: right;
+  margin-top: -80px;
+}
+/* customer part end */
+/* /////////////// */
+
+.openbtn , .closebtn {
+  display: none;
+}
+/* /////////////// */
+/* try */
+
+@media(max-width: 320px){
+  .openbtn , .closebtn {
+    display: block;
+  }
+  .sidepanel  {
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    height: 250px;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidepanel a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 12px;
+    color: #fff;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidepanel a:hover {
+    color: #f1f1f1;
+  }
+  
+  .sidepanel .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 22px;
+  }
+  
+  .openbtn {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #111;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+  }
+  
+  .openbtn:hover {
+    background-color:#444;
+  }
+  .table{
+    overflow-x: scroll;
+    display: block;
+    margin-left: 150px;
+  }
+  tr {
+    font-size: 7px;
+    text-align: center;
+  }
+  .border1, .border2 {
+    border: 1px solid;
+    height: 104px;
+    width: 135px;
+    margin-left: 0;
+    margin-bottom: 50px;
+    background-color: #146fd0;
+    color: #fff;
+    font-size: 12px;
+  }
+  .border2 {
+  margin-left: 80px;
+  }
+  .border1 {margin-left: 150px;}
+  #printTable {overflow-x: scroll;margin-left: 0px;}
+  .form-title {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+  font-size: 0;
+  }
+  .form-control {
+    width: 130%;margin-left: -25px;}
+    .sinin-image figure img {
+    width: 75%;
+    margin-left: 20px;}
+
+  .brand-text.font-weight-light {
+    font-size: 9px;
+  }
+  .sidebar {
+    overflow-x: auto;
+    margin-left: -155px;
+    margin-top: 20px;
+  }
+  .nav-link {
+    font-size: 10px;
+  }
+  .nav-icon.fas.fa-tachometer-alt {
+    width: 1.2rem;
+  }
+  .far.fa-circle.nav-icon {
+    display:  none;
+  }.main-sidebar.sidebar-dark-primary.elevation-4 {
+    display: flex;
+    margin-left: 1px;
+    width: 55%;
+  }.nav.nav-treeview {
+    margin-left: 22px;
+  }.nav-sidebar .nav-link > .right, .nav-sidebar .nav-link > p > .right {
+    position: absolute;
+    right: .10rem;
+    top: .7rem;
+  }.tit {
+    display: none;
+  }
+
+  .sidepanel {
+    padding-top: 10px;}
+  .sidebar {
+      padding-top: 20px;}
+      .sidepanel .closebtn {
+        position: absolute;
+        top: 2px;
+        right: 0px;
+        font-size: 22px;}.nav-icon.fas.fa-tachometer-alt {
+          margin-left: -27px !important;
+      }
+      .form-control {
+        margin-left: 0;
+    }.input-group-prepend.col-1 {
+      display: none;
+  }.table {
+    margin-left: 0px;
+  }.border1 {
+    margin-left: 0px;
+  }
+  .border2 {
+    margin-top: -153px;margin-left: 167px;
+  }
+  .form-control.col-10.p {
+    margin-left: 9px;
+    margin-top: 0;
+  }
+}
+
+/* 320 end */
+
+  @media(min-width: 320px) and (max-width: 480px){
+    .openbtn , .closebtn {
+      display: block;
+    }
+    .sidepanel  {
+      width: 0;
+      position: fixed;
+      z-index: 1;
+      height: 250px;
+      top: 0;
+      left: 0;
+      background-color: #111;
+      overflow-x: hidden;
+      transition: 0.5s;
+      padding-top: 60px;
+    }
+    
+    .sidepanel a {
+      padding: 8px 8px 8px 32px;
+      text-decoration: none;
+      font-size: 12px;
+      color: #fff;
+      display: block;
+      transition: 0.3s;
+    }
+    
+    .sidepanel a:hover {
+      color: #f1f1f1;
+    }
+    
+    .sidepanel .closebtn {
+      position: absolute;
+      top: 0;
+      right: 25px;
+      font-size: 22px;
+    }
+    
+    .openbtn {
+      font-size: 20px;
+      cursor: pointer;
+      background-color: #111;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+    }
+    
+    .openbtn:hover {
+      background-color:#444;
+    }
+    .table{
+      overflow-x: scroll;
+      display: block;
+      margin-left: 150px;
+    }
+    tr {
+      font-size: 7px;
+      text-align: center;
+    }
+    .border1, .border2 {
+      border: 1px solid;
+      height: 104px;
+      width: 135px;
+      margin-left: 0;
+      margin-bottom: 50px;
+      background-color: #146fd0;
+      color: #fff;
+      font-size: 12px;
+    }
+    .border2 {
+    margin-left: 286px;      margin-top: -153px;
+    }
+    .border1 {margin-left: 50px;}
+    #printTable {overflow-x: scroll;margin-left: 0px;}
+    .form-title {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+    font-size: 0;
+    }
+    .form-control {
+      width: 130%;margin-left: -25px;}
+      .sinin-image figure img {
+      width: 75%;
+      margin-left: 20px;}
+  
+    .brand-text.font-weight-light {
+      font-size: 9px;
+    }
+    .sidebar {
+      overflow-x: auto;
+      margin-left: -155px;
+      margin-top: 20px;
+    }
+    .nav-link {
+      font-size: 10px;
+    }
+    .nav-icon.fas.fa-tachometer-alt {
+      width: 1.2rem;
+    }
+    .far.fa-circle.nav-icon {
+      display:  none;
+    }.main-sidebar.sidebar-dark-primary.elevation-4 {
+      display: flex;
+      margin-left: 1px;
+    }.nav.nav-treeview {
+      margin-left: 22px;
+    }.nav-sidebar .nav-link > .right, .nav-sidebar .nav-link > p > .right {
+      position: absolute;
+      right: .10rem;
+      top: .7rem;
+    }.tit {
+      display: none;
+    }
+  
+    .sidepanel {
+      padding-top: 10px;}
+    .sidebar {
+        padding-top: 20px;}
+        .sidepanel .closebtn {
+          position: absolute;
+          top: 2px;
+          right: 0px;
+          font-size: 22px;}.nav-icon.fas.fa-tachometer-alt {
+            margin-left: -27px !important;
+        }
+        .form-control {
+          margin-left: 0;
+      }.input-group-prepend.col-1 {
+        display: none;
+    }.table {
+      margin-left: 0px;
+    }
+    .form-control.col-10.p {
+      margin-left: 9px;
+      margin-top: 0;
+    }
+}
+  @media (min-width: 480px) and (max-width: 580px){
+    .table{
+      overflow-x: scroll;
+      display: block;
+      margin-left: 150px;}
+      tr {
+        font-size: 7px;
+        text-align: center;
+    }
+    .border1, .border2 {
+      border: 1px solid;
+      height: 104px;
+      width: 135px;
+      margin-left: 0;
+      margin-bottom: 50px;
+      background-color: #146fd0;
+      color: #fff;
+      font-size: 12px;
+  }.border2 {
+    margin-left: 80px;
+}.border1 {
+  margin-left: 150px;
+}
+.btn.btn-outline-success.my-2.my-sm-0 {
+  width: 20%;
+  font-size: 10px;
+}#printTable {
+  overflow-x: scroll;
+}.form-title {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+  font-size: 0;
+}.form-control {
+  width: 130%;margin-left: -25px;}.sinin-image figure img {
+    width: 75%;
+    margin-left: 20px;
+}
+  }
+  
+
+    
